* detect maximum possible segment size on file system (e.g. FAT)

smraw.net
* implement other functions ?
* in examples print exception/backtrace on error

Test
* retrieve data from the information file on open
* make sure certain values cannot be changed if writing/reading from raw files
* add glob test to msvscpp project

Beta release
* remove deprecated functions in libsmraw_legacy.[ch]

20111009
* small changes to smrawmount

20111008
* updated configure.as and m4 files
* updated README files
* updated pc and spec file
* updated common
* updated libuna, libbfio, libhmac, libsystem

20110918
* updated spec file
* added smrawmount.1 man page
* tests: implemented libhmac
* updated msvscpp files

20110916
* merged smrawmount branch

20110901
* updated libuna, libbfio, libfvalue
* updated msvscpp files

20110831
* updated configure

20110731
* updated common, libfvalue, libmfdata

20110717
* added smraw_test_get_offset test to smraw_test_read

20110625
* changes for: warning: AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body
* updated include/codepage.h, list type
* updated common, libcstring, libuna, libbfio, libfvalue, libmfdata

20110312
* updated libcstring, libuna, libbfio, libmfdata
* updated msvscpp and codegear project files
* msvscpp added VSDebug build option

20110117
* updated libuna, libbfio

20110114
* updated common, libuna, libbfio

20110113
* updated test scripts for SunOS 5.11 support

20110111
* updated smraw.net

20110110
* updated libcstring, libuna, libbfio, libfvalue
* correction for identifier size
* correction for access flags
* added read and write random functions

20110108
* updated configure.ac
* updated common, libcstring, libuna, libbfio

20110106
* worked on UTF-16 functions
* tests: code clean up

20110104
* updated libuna, libbfio, libmfdata, libfvalue
* 2011 update

20101221
* fixed error in wide character open introduced by code clean up

20101219
* updated libcstring, libbfio, libfvalue, libmfdata
* code clean up
