@@ -41,11 +41,17 @@
 
 #include <libsystem.h>
 
-#if defined( HAVE_FUSE_H )
-#define FUSE_USE_VERSION	26
+#if defined( HAVE_FUSE_H ) || defined( HAVE_OSXFUSE_FUSE_H )
+#define FUSE_USE_VERSION        26
 
+#if defined( HAVE_FUSE_H )
 #include <fuse.h>
+
+#elif defined( HAVE_OSXFUSE_FUSE_H )
+#include <osxfuse/fuse.h>
 #endif
+
+#endif /* defined( HAVE_FUSE_H ) || defined( HAVE_OSXFUSE_FUSE_H ) */
 
 #include "mount_handle.h"
 #include "smrawoutput.h"
@@ -115,7 +121,7 @@ void smrawmount_signal_handler(
 	}
 }
 
-#if defined( HAVE_FUSE_H )
+#if defined( HAVE_LIBFUSE )
 
 #if ( SIZEOF_OFF_T != 8 ) && ( SIZEOF_OFF_T != 4 )
 #error Size of off_t not supported
@@ -593,7 +599,7 @@ on_error:
 	return( result );
 }
 
-#endif /* defined( HAVE_FUSE_H ) */
+#endif /* defined( HAVE_LIBFUSE ) */
 
 /* The main program
  */
@@ -617,7 +623,7 @@ int main( int argc, char * const argv[] )
 	libsystem_glob_t *glob                                = NULL;
 #endif
 
-#if defined( HAVE_FUSE_H )
+#if defined( HAVE_LIBFUSE )
 	struct fuse_operations smrawmount_fuse_operations;
 	struct fuse_chan *smrawmount_fuse_channel             = NULL;
 	struct fuse *smrawmount_fuse_handle                   = NULL;
@@ -770,7 +776,7 @@ int main( int argc, char * const argv[] )
 
 		goto on_error;
 	}
-#if defined( HAVE_FUSE_H )
+#if defined( HAVE_LIBFUSE )
 	if( memory_set(
 	     &smrawmount_fuse_operations,
 	     0,
@@ -788,8 +794,8 @@ int main( int argc, char * const argv[] )
 	smrawmount_fuse_operations.getattr = &smrawmount_fuse_getattr;
 
 	smrawmount_fuse_channel = fuse_mount(
-	                         mount_point,
-	                         NULL );
+	                           mount_point,
+	                           NULL );
 
 	if( smrawmount_fuse_channel == NULL )
 	{
@@ -800,11 +806,11 @@ int main( int argc, char * const argv[] )
 		goto on_error;
 	}
 	smrawmount_fuse_handle = fuse_new(
-	                        smrawmount_fuse_channel,
-	                        NULL,
-	                        &smrawmount_fuse_operations,
-	                        sizeof( struct fuse_operations ),
-	                        smrawmount_mount_handle );
+	                          smrawmount_fuse_channel,
+	                          NULL,
+	                          &smrawmount_fuse_operations,
+	                          sizeof( struct fuse_operations ),
+	                          smrawmount_mount_handle );
 	               
 	if( smrawmount_fuse_handle == NULL )
 	{
@@ -857,7 +863,7 @@ on_error:
 		liberror_error_free(
 		 &error );
 	}
-#if defined( HAVE_FUSE_H )
+#if defined( HAVE_LIBFUSE )
 	if( smrawmount_fuse_handle != NULL )
 	{
 		fuse_destroy(
