@@ -28,9 +28,7 @@
  * before including libsmraw.h
  */
 #if defined( _WIN32 ) && defined( DLL_EXPORT )
-#if !defined( HAVE_STATIC_EXECUTABLES )
 #define LIBSMRAW_DLL_IMPORT
-#endif
 #endif
 
 #include <libsmraw.h>
